# tiny_projects_2023

./: .gitignore  LICENSE  README.md
flutter/pomodoro_timer/: pubspec.yaml
flutter/pomodoro_timer/android/app/: build.gradle
flutter/pomodoro_timer/android/app/src/main/kotlin/com/jeshwinprince/pomodoro_timer/: MainActivity.kt
flutter/pomodoro_timer/ios/Runner/: AppDelegate.swift  Info.plist
flutter/pomodoro_timer/ios/Runner.xcodeproj/: project.pbxproj
flutter/pomodoro_timer/ios/Sounds/: notif.aiff
flutter/pomodoro_timer/lib/: main.dart  settings.dart
flutter/pomodoro_timer/lib/components/: neumorphic_button.dart  neumorphic_clock.dart  pomodoro_dots.dart  submenu.dart  top_bar.dart
flutter/pomodoro_timer/lib/components/clock/: clock_painter.dart  neumorphic_clock.dart
flutter/pomodoro_timer/lib/styles/: catppuccin.dart
flutter/pomodoro_timer/lib/utils/: constants.dart  defaults.dart  helper_functions.dart  notification_service.dart  settings_enums.dart  settings_model.dart
rust/bevy/my_sudoku/: Cargo.toml  index.html  wasm_build.sh
rust/bevy/my_sudoku/src/: board.rs  lib.rs  main.rs  makeui.rs  sudoku.rs
rust/bevy/sudoku/: Cargo.toml
rust/bevy/sudoku/src/: lib.rs  main.rs
rust/sudoku-gui/: Cargo.toml
rust/sudoku-gui/src/: gameboard_controller.rs  gameboard_view.rs  main.rs
rust/sudoku-tui/: Cargo.toml
rust/sudoku-tui/src/: board.rs  main.rs
typescript/sudokuAPI/: index.js  package.json
