[package]
name = "my_sudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.11.1"
catppuccin = "1.3.0"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.10", features = ["js"] }
rand = "0.8.5"
wasm-bindgen = "0.2.87"

[profile.dev.package."*"]
opt-level = "s"
